k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.syedtalhahussain.com
      secretName: tls-secret  
  rules:
    - host: app.syedtalhahussain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 5000
